= CHANGELOG

== Version 0.9.0
 * initial version

== Version 0.9.1
 * fixed include path bug

== Version 0.9.2 (the Ryan King edition)
 * added check for HTML validator being unable to parse a file

== Version 0.9.3 (the Ryan King/Jonathan Julian/Sylvain LaFleur edition)
 * MarkupValidator::validate_file now returns file path as Results.uri
 * All validate_file methods now allow a file path or an IO object (e.g. File)

== Version 1.0.0 (the GitHub edition)
 * Gemspec is now generated by a rake task to allow dynamic file lists
 * Updated docs
 
 == Version 1.0.1 (the Roman Shterenzon and James Rosen edition)
 * Fixed CSS profile constants
 * DRY unit tests
 * GET should be used only for queries with URI
 * Bugfix - file doesn't need to be writeable 
 
== Version 1.0.2
 * Added support for proxy servers
 * Fixed to minor unit test errors

== Version 1.1
 * Ruby 1.9 compatibility
 * Switched to Nokogiri for XML parsing

== Version 1.2
 * Use CSS3 as default profile 
 * Use Bundler and update to new RDoc command 
 
== Version 1.3
 * drop ruby 1.9 compatibility
 * Move markup and nu validators to https
 * Use POST for file validation (avoid crash for big files)
 * Use POST with x-www-form-urlencoded instead of multipart/form-data for feed validation
 * Mock test with VCR to prevent w3c abuse ban when replaying tests
 * Add support for context and skippedstring to CSS messages
 * Create gemspec
 * Move README from rdoc format to markdown format
 * Add capability to manage vendor extension as warning or error
 * Activate travis-ci build

== Version 1.3.1
 * Fix file validation in NuValidator
 * Fix issue in getting error line with NuValidator
