@@ -1,3 +1,3 @@
 module W3CValidators
-  VERSION = "1.3"
+  VERSION = "1.3.1"
 end
